fix: fixed closing toc on mobile

--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
@@ -2223,6 +2223,12 @@ button.platform-tag:focus-visible {
     border: none;
   }
 }
+@media (width >= 900px) {
+  .sidebar {
+    position: relative;
+    z-index: 1;
+  }
+}
 .theme-dark .sidebar {
   border-right-color: #56565f;
 }
